# quilltangle_v8

./: .env.example  .gitignore  8XM_PLATFORM_VISION_v1.md  GAME_DESIGN_DOCUMENT_v1.md  QUILLTANGLE_BUNDLE_README.md  QUILLTANGLE_BUNDLE_README_v2.md  RAINBOW_ROADS_ANALYSIS_v1.md  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
SendArcade/Send-Arcade-tgbot-main/: Dockerfile  README.md  next.config.ts  package-lock.json  (+1 more)
SendArcade/SendRC-main/programs/sol_cross/: Cargo.toml
SendArcade/SendRC-main/programs/sol_cross/src/: lib.rs
core/: CRYSWORD_SAGA_COMPLETE_ZINE_v2.0.md  CRYSWORD_SAGA_RPG_ZINE.md  CRYSWORD_SAGA_RPG_ZINE_FINAL.md  CRYSWORD_SAGA_TTRPG_DESIGN.md
docs/: AUDIO-ARCHITECTURE-PROPOSAL_v1.md  FARMCRAFT-NASEF-POLICY_v1.md  GARU_EGG_QUICK_REFERENCE_v1.md  GARU_LIFECYCLE_SYSTEM_v1.md  GARU_RESURRECTION_GUIDE_v1.md  IMPLEMENTATION-STATUS-AND-STRATEGY_v1.md  IMPLEMENTATION-STATUS-AND-STRATEGY_v2.md  Pathfinder SRD.docx  QUILLVERSE-ARCHITECTURE_v1.2.md  QUILLVERSE-ARCHITECTURE_v1.md  QUILLVERSE_FAMILY_CRYPTO_EDUCATION_v1.md  QUILLVERSE_PLAYER_GUIDE_v1.md  ROADS_AND_EGGS_IMPLEMENTATION_v1.md  SYSTEM_INTEGRATION_GUIDE_v1.md  TEK8_GOVERNANCE_ECONOMY_v1.md  TEK8_LEAN_MVP_VISION_v1.md  TRINITY-TOKEN-GOVERNANCE_v1.md
scripts/: add-character-slots.mjs  add-garu-lifecycle-tables.mjs  add-garu-resurrection-tables.mjs  add-metaplex-metadata.mjs  add-tek8-garu-tables.mjs  add-verification-columns.mjs  fix-token-metadata.mjs  migrate-add-gifts.mjs  setup-database.mjs  update-garu-tables-v2.mjs
src/: middleware.ts
(+264 files in other folders)
