[package]
name = "sol_cross"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_cross"

[features]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.2.1", features = ["anchor"] }

# Pin proc-macro2 to a version that works
[dependencies.proc-macro2]
version = "=1.0.67"
